# prueba-backend-fastapi

./: .gitignore  .pylintrc  Pipfile  docker-compose.yml  lint.sh  main.py  pyproject.toml
migrations/models/: 0_20220810212153_init.sql  0_20220810214150_init.sql  1_20220829215818_add_username_to_user_model.sql  2_20220912223029_add_idea_model.sql
src/: app.py
src/auth/: auth_guard.py  hash.py  strategy.py
src/core/: config.py
src/db/: db.py
src/graphql/inputs/: change_password_input.py  create_idea_input.py  login_input.py  register_input.py  request_restore_password_input.py  restore_password_input.py
src/graphql/middlewares/: token_middleware.py
src/graphql/resolvers/: change_password_resolver.py  create_idea_resolver.py  login_resolver.py  register_resolver.py  request_restore_password_link_resolver.py  restore_password_resolver.py  user_resolver.py
src/graphql/schemas/: mutation_schema.py  query_schema.py
src/graphql/types/: idea_type.py  user_type.py
src/models/: __init__.py  users_model.py
src/models/idea/: idea_model.py  idea_visibility.py
src/models/users/: user_model.py
src/routes/: init_routes.py
